Fixed some bugs in Harmony.
Added a timeout to GS connection that leaves a channel server
if it takes too long to connect.

Fixed bug where layer user AV windows appeared while transitioning
to channel users.

Made Harmony button look like instance chat button.

Added rough nameplate for channel that one is connected to. Needs to be
improved for friend and party isn't right.

--- a/packages/client-core/components/ui/Layout/Layout.module.scss
+++ b/packages/client-core/components/ui/Layout/Layout.module.scss
@@ -18,13 +18,20 @@
     }
 }
 
-.openHarmony,
-.closeHarmony {
+.harmony-toggle {
     position: absolute !important;
     right: 0;
     bottom: 0;
-    margin-bottom: 100px !important;
-    width: 100px;
+    display: flex;
+    margin: 5px 0 60px 5px !important;
+    align-items: center;
+    color: #000 !important;
+    &:hover {
+        cursor: pointer;
+    }
+    svg{
+        margin: 0 5px 0 0 ;
+    }
 }
 .fullScreen {
     display: inline-block;
@@ -36,7 +43,7 @@
     position: fixed;
     bottom: 30px;
     left: 30px;
-    transition: background-color .3s, 
+    transition: background-color .3s,
     opacity .5s, visibility .5s;
     // opacity: 0;
     // visibility: hidden;
